<resources>
    <string name="app_name">AdmissionApp</string>
    <string name="hint_nro_identificacion">Nro de Identificación</string>
    <string name="common_mandatory_hint">Obligatorio</string>
    <string name="hint_nombres">Nombres</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="label_sexo_masculino">Masculino</string>
    <string name="label_sexo_femenino">Femenino</string>
    <string name="label_sexo_indistinto">Indistinto</string>
    <string name="label_sexo">Sexo</string>
    <string name="hint_fechanac">Fecha de Nacimiento</string>
    <string name="hint_lugar_nac">Lugar de nacimiento</string>
    <string name="hint_ciudad">Ciudad</string>
    <string name="hint_pais">País</string>
    <string name="hint_nacionalidad">Nacionalidad</string>
    <string name="hint_telefono">Telefono/Celular</string>
    <string name="hint_domicilio">Domicilio</string>
    <string name="label_siguiente">Siguiente</string>
    <string name="label_detalle">Detalles</string>
    <string name="label_guardar">Guardar</string>
    <string name="hint_seguro_medico">Seguro médico</string>
    <string name="hint_hijos">Hijos</string>
    <string name="hint_estado_civil">Estado Civil</string>
    <string name="hint_nivel_educativo">Nivel educativo</string>
    <string name="hint_situacion_laboral">Situación laboral</string>
    <string name="hint_latitud">Latitud</string>
    <string name="hint_longitud">Longitud</string>
    <string name="titulo_asignar_medico">Asignar médico</string>
    <string name="hint_correo">Correo</string>
    <string name="titulo_admision">Formulario de Admisión</string>
    <string name="titulo_otros_datos">Otros datos</string>
    <string name="helper_ci">Nº CI</string>
    <string name="titulo_pacientes_admitidos">Pacientes Admitidos</string>
    <string name="password_hint">Contraseña</string>
    <string name="usuario_hint">Usuario</string>
    <string name="textbutton_login">Log in</string>
    <string name="texttv_login">Login</string>
    <string name="texttv_admisionapp">AdmissionApp</string>
    <string name="title_activity_navegacion">NavegacionActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sysadmission Menu</string>
    <string name="nav_header_subtitle">App médica</string>
    <string name="nav_header_desc">Sysadmission Menu</string>
    <string name="action_settings">Salir</string>

    <string name="menu_admision">Admisión</string>
    <string name="menu_preconsulta">Preconsulta</string>
    <string name="menu_consulta">Consulta</string>
    <string name="menu_referenciales">Referenciales</string>
    <string name="abriendo_menu">Abriendo</string>
    <string name="cerrando_menu">Cerrando</string>

    <string name="hint_identificador_referencial">Identificador</string>
    <string name="hint_descripcion_referencial">Descripción</string>
    <string name="hint_codigo_usuario">Codigo Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="chk_text_estado">Activo</string>

    <string name="p_nombre_preconsulta">Nombre Preconsulta</string>
    <string name="titulo_pacientes_admitidos_preconsulta">Pacientes Preconsulta</string>
    <string name="titulo_preconsulta">Formulario de Preconsulta</string>

    <string name="hint_nro_registro_profesional">Nro. registro profesional</string>
    <string name="titulo_consulta">Formulario de Consulta</string>
    <string name="titulo_paciente_preconsulta">Pacientes con Preconsulta</string>

</resources>