<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_admision"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_admision" />
        <item
            android:id="@+id/nav_preconsulta"
            android:icon="@drawable/ic_content_paste_go"
            android:title="@string/menu_preconsulta" />
        <item
            android:id="@+id/nav_consulta"
            android:icon="@drawable/ic_content_paste_search"
            android:title="@string/menu_consulta" />
        <item
            android:id="@+id/nav_referenciales"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_referenciales">
            <menu>
                <item
                    android:id="@+id/nav_ciudad"
                    android:title="Ciudad" />
                <item
                    android:id="@+id/nav_nacionalidad"
                    android:title="Nacionalidad" />
                <item
                    android:id="@+id/nav_seguro_medico"
                    android:title="Seguro médico" />
                <item
                    android:id="@+id/nav_nivel_educativo"
                    android:title="Nivel educativo" />
                <item
                    android:id="@+id/nav_situacion_laboral"
                    android:title="Situación Laboral" />
                <item
                    android:id="@+id/nav_especialidad"
                    android:title="Especialidad" />
                <item
                    android:id="@+id/nav_usuario"
                    android:title="Usuario" />
                <item
                    android:id="@+id/nav_profesional"
                    android:title="Profesional" />
            </menu>
        </item>
    </group>
</menu>