<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".referenciales.FormMainReferencialesActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCodigoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:hint="@string/hint_codigo_usuario"
        app:helperText="@string/common_mandatory_hint"
        app:startIconDrawable="@drawable/ic_grid">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etICodigoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="10"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:hint="@string/hint_password"
        app:helperText="@string/common_mandatory_hint"
        app:startIconDrawable="@drawable/ic_lock_open">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="60"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombresUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:hint="@string/hint_nombres"
        app:helperText="@string/common_mandatory_hint"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombresUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapCharacters"
            android:maxLength="60"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilApellidosUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:hint="@string/hint_apellidos"
        app:helperText="@string/common_mandatory_hint"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etApellidosUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapCharacters"
            android:maxLength="60"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescripcionUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:hint="@string/hint_descripcion_referencial"
        app:startIconDrawable="@drawable/ic_notes">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescripcionUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapCharacters"
            android:maxLength="60"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spRolUsuario"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/chkEstadoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/chk_text_estado"/>

</LinearLayout>