<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".referenciales.FormMainReferencialesActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilIdReferencial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:hint="@string/hint_identificador_referencial"
        app:startIconDrawable="@drawable/ic_grid">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etIdReferencial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="3"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescripcionReferencial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:hint="@string/hint_descripcion_referencial"
        app:helperText="@string/common_mandatory_hint"
        app:startIconDrawable="@drawable/ic_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescripcionReferencial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapCharacters"
            android:maxLength="60"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>